fixed warnings and navbar layout on small screen

--- a/src/index.css
+++ b/src/index.css
@@ -9,24 +9,27 @@
   margin: 10% auto;
   justify-content: baseline;
 }
+
 .about-me-content {
   margin-top: 30px;
 }
 
 #profile-pic {
   width: 90%;
- 
 }
+
 .profile-pic {
- margin-right: 20px;
+  margin-right: 20px;
 }
 
 #github {
   width: 5%;
 }
+
 #linkedin {
   width: 4%;
 }
+
 #email {
   width: 5%;
 }
@@ -58,7 +61,16 @@
 
 @media only screen and (max-width: 550px) {
   #profile-pic {
-    margin-top: 120px;
+    /* margin-top: 120px; */
+    display: none;
+  }
+  .david-rada {
+    margin-left: -100px !important;
   }
 }
 
+@media only screen and (max-width: 380px) {
+  .david-rada {
+    margin-left: -75px !important;
+  }
+}
